Azure media support (#17)
* Media store in Azure supported

* Media storage enhancement

* media storage in azure
