# src/main/java/net/samitkumar/multi_tenant_salon/analytics/internal/AnalyticsEventType.java
@@ -1,0 +1,6 @@
+package net.samitkumar.multi_tenant_salon.analytics.internal;
+
+enum AnalyticsEventType {
+    PAGE_VIEW,
+    CLICK
+}
